--- a/style.css
+++ b/style.css
@@ -53,32 +53,43 @@ div{
 
 .container {
     position: relative;
-    width: 50%;
+    /* width: 50%; */
   }
   
   /* Make the image responsive */
-  .container img {
-    width: 100px;
+  #index  img {
+    width: 200px;
+    height:250px;
+    /* height: auto; */
+  }
+  #portfolio  img {
+    width: 125px;
     height:150px;
     /* height: auto; */
   }
   
-  /* Style the button and place it in the middle of the container/image */
+  /* Style the button and place it at the bottom of the container/image */
   .container .btn {
     position: absolute;
-    top: 25%;
+    top: 75%;
     left: 50%;
     transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
+    /* -ms-transform: translate(75%, 75%); */
     background-color: blueviolet;
     color: white;
-    font-size: 16px;
-    padding: 12px 24px;
+    /* font-size: 16px; */
+    padding: 12px 60px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
   }
-  
-  .container .btn:hover {
-    background-color: black;
+
+  .img-responsive{
+      float: left;
+      /* padding-left:10px; */
+      padding-right: 15px;;
   }
+  
+  /* .container .btn:hover {
+    background-color: black;
+  } */
