--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body{
     background-image: url('https://cdn141.picsart.com/278359967011201.jpg?type=webp&to=min&r=640');
-    background-repeat: no-repeat; 
+    background-repeat: yes; 
     background-size: cover; 
     background-position: center;
 }
+
 .collapse a{
     color:white;
 }
@@ -20,13 +21,16 @@ body{
     background-color: blueviolet;
     font-family: 'Noto Serif', serif;
 }
+
 div{
     color: white;
 }
 
+.form-control{
+    width:750px;
+}
 #formGroupExampleInput3{
     height:300px;
-    text-align: initial;
 }
 
 #straight-line{
@@ -36,6 +40,9 @@ div{
 
 .btn{
     background-color: blueviolet;
+    text-align: left;
+    position: fixed;
+    left:30px;
 }
 
 #portfolio-spacing{
@@ -46,11 +53,6 @@ div{
     align-content:top;
 }
 
-/* img{
-    height:150px;
-    width:100px:
-} */
-
 .container {
     position: relative;
     /* width: 50%; */
@@ -60,36 +62,72 @@ div{
   #index  img {
     width: 200px;
     height:250px;
-    /* height: auto; */
   }
   #portfolio  img {
     width: 125px;
     height:150px;
-    /* height: auto; */
   }
   
   /* Style the button and place it at the bottom of the container/image */
-  .container .btn {
+  /* .container .btn {
     position: absolute;
     top: 75%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);*/
     /* -ms-transform: translate(75%, 75%); */
-    background-color: blueviolet;
-    color: white;
+    /* background-color: blueviolet;
+    color: white; */
     /* font-size: 16px; */
-    padding: 12px 60px;
+   /* padding: 12px 60px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
-  }
+  } */
 
   .img-responsive{
       float: left;
-      /* padding-left:10px; */
       padding-right: 15px;;
   }
   
-  /* .container .btn:hover {
+  .container .btn:hover {
     background-color: black;
-  } */
+  }
+
+  box{
+    position: relative;
+    display: inline-block; /* Make the width of box same as image */
+}
+/* .box .text{
+    position: absolute;
+    z-index: 999;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 100px; /* Adjust this value to move the positioned div up and down */
+    /*text-align: left;
+    width: 25%; /* Set the width of the positioned div 
+} */
+
+.box1{
+    position:relative;
+    top:25px;
+}
+
+.box2{
+    position:relative;
+    top:-122px;
+    left:200px;
+}
+
+.box1 .text{
+    position: absolute;
+    left:85x;
+    bottom:15px;
+    background-color: blueviolet;
+}
+.box2 .text{
+    position: absolute;
+    left:-30px;
+    bottom:15px;
+    background-color: blueviolet;
+}
