Adjusting padding for picture alignment on portfolio

--- a/style.css
+++ b/style.css
@@ -72,7 +72,8 @@ div{
     position:relative;
     top:25px;
     left:50px;
-    /* right:50px; */
+    right:50px;
+    bottom:50px;
 }
 
  /* Setup position of second image */
@@ -80,7 +81,8 @@ div{
     position:relative;
     top:25px;
     left:100px;
-    right:50px;
+    right:100px;
+    bottom:50px;
 }
 
  /* Setup position of third image */
@@ -95,7 +97,7 @@ div{
     position:relative;
     top:50px;
     left:100px;
-    right:50px;
+    right:1000px;
 }
 
 /* Setup text positioning of first image */
