--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* Setup the background of my website */
 body{
-    background-image: url("Assets/Images/MilkyWay.jpg");
+    /* background-image: url("Assets/Images/MilkyWay.jpg"); */
+    background-image: url("Assets/Images/mural.jpg");
     background-repeat: yes; 
     background-size: cover; 
     background-position: center;
